--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mybatis
 spring.datasource.username=root
 spring.datasource.password=pure6671.
-
+spring.jpa.hibernate.ddl-auto=update
+mybatis.type-aliases-package=com.example.mybatis
+mybatis.mapper-locations:classpath:mapper/*.xml
